--- a/FTPClient.GUI/FTPClient.GUI.csproj
+++ b/FTPClient.GUI/FTPClient.GUI.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="4.1.0" />
+    <PackageReference Include="ReactiveUI" Version="14.1.1" />
+    <PackageReference Include="ReactiveUI.Events.WPF" Version="14.1.1" />
+    <PackageReference Include="ReactiveUI.WPF" Version="14.1.1" />
   </ItemGroup>
 
 </Project>
