√对接ViewModel中的部分命令 1. 连接 2. 断开 3. 列出文件 4. 切换工作目录

--- a/FTPClient.GUI/FTPClient.GUI.csproj
+++ b/FTPClient.GUI/FTPClient.GUI.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="ReactiveUI.WPF" Version="14.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FTPClient.Core\FTPClient.Core.csproj" />
+  </ItemGroup>
+
 </Project>
