一个FTPClient的实现——WhyFTPClient
其实是我瞎起的名字

--- a/FTPClient.GUI/FTPClient.GUI.csproj
+++ b/FTPClient.GUI/FTPClient.GUI.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FTPClient.Core\FTPClient.Core.csproj" />
+    <ProjectReference Include="..\FTPClient.WhyFTP\FTPClient.WhyFTP.csproj" />
   </ItemGroup>
 
 </Project>
